# dq_sdk

./: ARCHITECTURE.html  README.html  README.md  USAGE.html  USAGE.md  VALIDATIONS_AND_DIMENSIONS.html  WALKTHROUGH.html  WALKTHROUGH.md  build_docs_html.py  data_quality_checker.py  examples.py  pyproject.toml  pytest.ini  python_preview_docs.py  quick_start_example.py  run_analysis.py  run_demo.py  run_pipeline_examples.py
_html_preview/: architecture.html  getting_started.html  pipeline.html  readme.html  usage.html
data/: demo_quality_report.csv  demo_quality_report_field_details.csv  quality_report.csv  quality_report_field_details.csv  sample_data.csv
data_quality/: __init__.py  checker.py  comparison.py  dimensions.py  docs_utils.py  expectations.py  getting_started.py  pipeline.py  reporting.py  similarity.py  suggestion.py  utils.py
demos/: VALIDATIONS_AND_DIMENSIONS.md  __init__.py  demo_data.py  reference.py  run_demo.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  USAGE.md  VALIDATIONS_AND_DIMENSIONS.md  WALKTHROUGH.md  overview.html
modularized_data_quality.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_sample_data.py
tests/: conftest.py  test_checker.py  test_comparison.py  test_e2e.py  test_expectations.py  test_pipeline.py  test_reporting.py  test_similarity.py  test_suggestion.py  test_utils.py
