[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modularized-data-quality"
version = "0.1.0"
description = "Data quality expectations and reporting for pandas DataFrames"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini.options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = ["e2e: end-to-end tests full flow and CSV on disk"]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_quality*"]
